<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Fitzoh</string>
    <string name="stayAccountable">STAY ACCOUNTABLE</string>
    <string name="signup">SIGN UP</string>
    <string name="resend">RESEND</string>
    <string name="signin">SIGN IN</string>
    <string name="username">User name</string>
    <string name="start">Start</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_verify">Verify</string>
    <string name="submit">Submit</string>
    <string name="sets">Sets</string>
    <string name="time">Time</string>
    <string name="tvresult">Result</string>
    <string name="level">Level</string>
    <string name="enterresulthere">Enter your result here</string>
    <string name="enterresult">Enter Your Result</string>
    <string name="result">Result: Cardiovasular Endurance</string>
    <string name="startfitnesstest">Start Fitness Test</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advance">Advance</string>
    <string name="inseam">Inseam</string>
    <string name="selectyourplan">Select Your Plan</string>
    <string name="waist">Waist</string>
    <string name="bodyfatcount">Body Fat Count</string>
    <string name="photoandmesurement">Photo and Measurement</string>
    <string name="bynina">By Nina Anderson</string>
    <string name="berelax">Be Relax Yoga</string>
    <string name="livesession">Live Session of The Day</string>
    <string name="exercises">Exercises</string>
    <string name="todayworkout">Today’s Workout</string>
    <string name="bml">BMI</string>
    <string name="medicalrecords">Medical Records</string>
    <string name="fitnessdevice">Fitness Device integration</string>
    <string name="referals">Referals</string>
    <string name="location">Location</string>
    <string name="activesubsciptions">Active Subscriptions</string>
    <string name="purchases"> Purchases</string>
    <string name="reminder"> Reminder</string>
    <string name="callreminder"> Call Reminder</string>
    <string name="calendernotification"> Calendar Notification</string>
    <string name="weight">Weight</string>
    <string name="editprofile">Edit Profile</string>
    <string name="welcome">Welcome,</string>
    <string name="hellomartin">Hello Martin!</string>
    <string name="otpsend">We have send the OTP on your email address to verify enter below</string>
    <string name="verifyaccount">Verify Your Account</string>
    <string name="profile">Profile</string>
    <string name="mealpackages">Meal Packages</string>
    <string name="onetimeconsult">One-Time Consultations</string>
    <string name="yoga">Yoga</string>
    <string name="gallery">GALLERY</string>
    <string name="slot_booking">SLOT BOOKING</string>
    <string name="kiwifruit">Kiwi Fruit</string>
    <string name="boiledegg">Boiled Egg</string>
    <string name="breakfast">Breakfast</string>
    <string name="cardio">Cardio(AM)</string>
    <string name="workout">Workout</string>
    <string name="totalmeal">Total-Meal : 3</string>
    <string name="todaydiet">Today’s Diet</string>
    <string name="todayworkoutvideo">Today’s Workout Video</string>
    <string name="meditation">Meditation</string>
    <string name="endurance">Endurance</string>
    <string name="booksessionlive">Book Live Session</string>
    <string name="onlinecounsellore">Online Counselloer Program</string>
    <string name="onlinetraining">Online Training Program</string>
    <string name="healthtransform">Holistic Health Transformation</string>
    <string name="packages">Packages</string>
    <string name="termsconditions"> Terms and Conditions</string>
    <string name="agree">By submitting this form you agree with our </string>
    <string name="alreadyaccount">Already have an account?</string>
    <string name="donthaveaccount">Don’t have an account yet?</string>
    <string name="dontgetcode">Did’t get your code?</string>
    <string name="currentbodyfat">Current Body Fat</string>
    <string name="signupcontinue">Sign up to continue</string>
    <string name="signincontinue">Sign in to continue</string>
    <string name="signinwithnoandemail">Sign in with your Mobile Number/Email Address and we will send you OTP</string>
    <string name="tvTurnOnNotifivcation">Turn on push notifications to receive Workout reminders</string>
    <string name="error_pleasefilldata">Please fill all the data</string>
    <string name="error_pleaseEnterEmail">Please enter email</string>
    <string name="error_wrg">Wrong email</string>
    <string name="hint_usrname">User name</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_no">Mobile Number</string>
    <string name="hint_DOB">Date of Birth</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_height">Height</string>
    <string name="hint_weight">Weight</string>
    <string name="hint_emailNo">Email Address/Mobile Number</string>
    <string name="hint_mealtype">Meal Type</string>
    <string name="hint_dailyactivity">Daily Activity(minutes)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_10_20">10:20</string>
    <string name="_9_10">9/10</string>
    <string name="_05">05</string>
    <string name="_01_20">01:20</string>
    <string name="bewell_b">Bewell B.</string>
    <string name="home">Home</string>
    <string name="today_s_slot">Today’s Slot</string>
    <string name="_06am_09am">06am - 09am</string>
    <string name="_03pm_06pm">03pm - 06pm</string>
    <string name="_06pm_09pm">06pm - 09pm</string>
    <string name="session_request">Session Request</string>
    <string name="view_all">View All</string>
    <string name="upcoming_request">Upcoming Request</string>
    <string name="motivation">Motivation</string>
    <string name="bewell_bykelly">Bewell Bykelly</string>
    <string name="_12_06_2020_14_00pm">12/06/2020 | 14: 00pm</string>
    <string name="_13_march_2020">13 March 2020</string>
    <string name="badass_chest">Badass Chest</string>
    <string name="barbell_bench_press">Barbell Bench Press</string>
    <string name="dumbell_press">Dumbell Press</string>
    <string name="_05_rounds_x_10_10_10_10">05 rounds X 10 / 10 / 10 / 10</string>
    <string name="how_to_dumbbell_chest_pre">How To: Dumbbell Chest Pre..</string>
    <string name="_04_rounds_x_12_10_06_06">04 rounds X 12 / 10 / 06 / 06</string>
    <string name="dubell_fly">Dubell Fly</string>
    <string name="cable_flys">Cable Flys</string>
    <string name="_04_rounds_x_15_15_15_15">04 rounds X 15 / 15 / 15 / 15</string>
    <string name="checkin">Check in</string>
    <string name="home_screen">Home Screen</string>
    <string name="connect_with">CONNECT WITH</string>
    <string name="the_best_online_trainers_andarchieve_your_fitness_goals">The Best Online Trainers andArchieve your fitness goals</string>
    <string name="search">Search</string>
    <string name="upcoming_sessions">Upcoming Sessions</string>
    <string name="today">Today</string>
    <string name="trainer_name_ayesha_billimoria">Trainer Name: Ayesha Billimoria</string>
    <string name="_3_30_pm_live_at_home">3:30 pm, Live | At home</string>
    <string name="ayesha_billimoria_for_a_power_pack_strength_and_conditioning_workshop">Ayesha Billimoria for a power-pack strength and conditioning workshop.</string>
    <string name="trainer_profile">Trainer Profile</string>
    <string name="general_counsellor">General Counsellor</string>
    <string name="jessica_mortensen">Jessica Mortensen</string>
    <string name="id_abc435378">ID: abc435378</string>
    <string name="take_a_fitness_test">Take a Fitness Test</string>
    <string name="take_a_personality_test">Take a Personality Test</string>
    <string name="find_my_plan">Find My Plan</string>
    <string name="track_nutrition">Track Nutrition</string>
    <string name="track_workout">Track Workout</string>
    <string name="_2_of_6_meals_tracked">2 of 6 meals tracked</string>
    <string name="_99_calories_tracked">99 calories tracked</string>
    <string name="no_workout_track_yet">No workout track yet</string>
    <string name="fitzoh_video_library">Fitzoh Video Library</string>
    <string name="view_more">View More</string>
    <string name="every_day_blish">Every day Blish</string>
    <string name="book_live_session">Book Live Session</string>
    <string name="wholistic_health_and_wellness">Wholistic Health and Wellness</string>
    <string name="one_time_consulation">One time Consulation</string>
    <string name="online_trainer">Online Trainer</string>
    <string name="blog">Blog</string>
    <string name="_02_30_04_00">02:30 / 04:00</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adip">Lorem ipsum dolor sit amet, consectetur adip.</string>
    <string name="hypnosis_for_instant_freedom_from_stress_anxiety"><![CDATA[Hypnosis for instant Freedom from stress & Anxiety]]></string>
    <string name="goal_setting">Goal Setting</string>
    <string name="your_bmi_27_0">Your BMI: 27.0</string>
    <string name="idea_weight_range">Idea Weight range</string>
    <string name="overweight">OVERWEIGHT</string>
    <string name="_48_58_kg">48–58 kg</string>
    <string name="set_target_weight">Set target weight</string>
    <string name="todo">TODO</string>
    <string name="_5_medium">5 Medium</string>
    <string name="_2_fruits">2 Fruits</string>
    <string name="_03">03</string>
    <string name="_04_00_pm">04:00 PM</string>
    <string name="_06_00_pm">06:00 PM</string>
    <string name="_08_00_pm">08:00 PM</string>
    <string name="_80kg">80kg</string>
    <string name="_12">12</string>
    <string name="_93_2cm">93.2cm</string>
    <string name="_83_1cm">83.1cm</string>
    <string name="_09pm_12am">09pm - 12am</string>
    <string name="_75kg">75kg</string>
    <string name="_23_15">23.15</string>
    <string name="trainer">Trainer</string>
    <string name="calender">Calender</string>
    <string name="trainers">Trainers</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="_54_kg">54 kg</string>
    <string name="fitness_goals">Fitness Goals</string>
    <string name="select_your_fitness_goal_level">Select your fitness goal level</string>
    <string name="which_positive_habits_would_you_want_to_build">Which positive habits would you want to build ?</string>
    <string name="lorem_ipsum_dolor_sit_amet">Lorem ipsum dolor sit amet,</string>
    <string name="consectetur_adipiscing_elit">Consectetur adipiscing elit</string>
    <string name="nullam_ac_turpis_ac_risus_posuere">Nullam ac turpis ac risus posuere.</string>
    <string name="i_commit">I Commit</string>
    <string name="develop_a_consistent_wake_up_routine">Develop a consistent wake-up routine.</string>
    <string name="sickness_hygiene">Sickness hygiene</string>
    <string name="_0">0</string>
    <string name="calories_35_protein_3gm_carbs_5gm_fat_10gm">Calories: 35 | Protein: 3gm | Carbs: 5gm | Fat: 10gm</string>
    <string name="cancel">Cancel</string>
    <string name="select_result">Select Result</string>
    <string name="enter_your_comment">Enter your comment</string>
    <string name="add_meal">Add Meal</string>
    <string name="meal_name">Meal Name</string>
    <string name="meal_time">Meal Time</string>
    <string name="add">Add</string>
    <string name="add_food_item">Add Food Item</string>
    <string name="food_drink">Food/Drink</string>
    <string name="search_food_drink">Search food/drink</string>
    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="no_of_servings">No. of Servings</string>
    <string name="add_servings">Add servings</string>
    <string name="serving_size">Serving Size</string>
    <string name="add_item">ADD ITEM</string>
    <string name="_0_00">0:00</string>
</resources>