<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/meallayout"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tvExistinPreviousTrainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/add_meal"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_margin="@dimen/spacing_10"
        android:textSize="@dimen/font_22" />
    <EditText
        android:id="@+id/etMealname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:padding="@dimen/spacing_10"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/font_15"
        android:textColorHint="@color/textcolorgray"
        android:hint="@string/meal_name"
        android:layout_margin="@dimen/spacing_10"
        android:background="@drawable/custom_weight_layout"
        android:autofillHints="@string/_0" />
    <EditText
        android:id="@+id/etMealtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:padding="@dimen/spacing_10"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/font_15"
        android:textColorHint="@color/textcolorgray"
        android:hint="@string/meal_time"
        android:layout_margin="@dimen/spacing_10"
        android:background="@drawable/custom_weight_layout"
        android:autofillHints="@string/_0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAdd"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="@dimen/spacing_5"
            android:layout_gravity="center"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/add"
            android:padding="@dimen/spacing_10"
            android:textSize="@dimen/font_12" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/ButtonDefaultStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="@dimen/spacing_10"
            android:layout_gravity="center"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/cancel"
            android:textColor="@color/bluee"
            android:padding="@dimen/spacing_10"
            android:textSize="@dimen/font_12" />
    </LinearLayout>
</LinearLayout>