<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:id="@+id/llfoodlayout"
    tools:context=".ui.home.activities.AddFoodItemActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:layout_marginStart="@dimen/spacing_10"
            android:contentDescription="@string/todo"
            android:src="@drawable/leftarrow" />

        <TextView
            android:id="@+id/tvNutritionPlan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/add_food_item"
            android:textColor="@color/black"
            android:textSize="@dimen/font_18"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvTodayWorkOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_10"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/food_drink"
        android:textColor="@color/black"
        android:textSize="@dimen/font_15" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:layout_marginStart="@dimen/spacing_10"
        android:layout_marginEnd="@dimen/spacing_10"
        app:cardCornerRadius="@dimen/spacing_5">

       <!-- <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_food_drink"
            android:drawableEnd="@drawable/ic_search"
            android:fontFamily="@font/poppins_medium"
            android:textColorHint="@color/textcolorgray"
            style="@style/EdittextStyle"
            android:inputType="text"
            android:layout_gravity="center"
            android:textSize="@dimen/font_12"
            android:padding="@dimen/spacing_5"
            android:autofillHints="@string/_0" />-->
        <AutoCompleteTextView
            android:id="@+id/actv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text=""
            android:layout_gravity="center"
            android:hint="@string/search_food_drink"
            android:textColorHint="@color/textcolorgray"
            style="@style/EdittextStyle"
            android:textSize="@dimen/font_12"
            android:drawableEnd="@drawable/ic_search"
            tools:ignore="LabelFor" />

    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/tvNutritionFacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_10"
        android:layout_marginTop="@dimen/spacing_10"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/nutrition_facts"
        android:textColor="@color/black"
        android:textSize="@dimen/font_15" />
    <TextView
        android:id="@+id/tvCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/calories_35_protein_3gm_carbs_5gm_fat_10gm"
        android:layout_marginStart="@dimen/spacing_10"
        android:textColor="@color/textcolorgray"
        android:textSize="@dimen/font_10" />
    <TextView
        android:id="@+id/tvnoofserving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_10"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/no_of_servings"
        android:textColor="@color/black"
        android:textSize="@dimen/font_15" />
    <EditText
        android:id="@+id/etNoofServing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_servings"
        android:layout_marginStart="@dimen/spacing_10"
        android:layout_marginEnd="@dimen/spacing_10"
        android:drawableEnd="@drawable/ic_itemlist"
        android:fontFamily="@font/poppins_medium"
        android:textColorHint="@color/textcolorgray"
        style="@style/EdittextStylespinner"
        android:inputType="text"
        android:focusable="false"
        android:layout_gravity="center"
        android:textSize="@dimen/font_12"
        android:padding="@dimen/spacing_10"
        android:autofillHints="@string/_0"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/tvServingsize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_10"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/serving_size"
        android:textColor="@color/black"
        android:textSize="@dimen/font_15" />


      <EditText
            android:id="@+id/etServingSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/serving_size"
            android:drawableEnd="@drawable/ic_itemlist"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginStart="@dimen/spacing_10"
            android:layout_marginEnd="@dimen/spacing_10"
            android:textColorHint="@color/textcolorgray"
            style="@style/EdittextStylespinner"
            android:inputType="text"
            android:focusable="false"
            android:layout_gravity="center"
            android:textSize="@dimen/font_12"
            android:padding="@dimen/spacing_10"
            android:autofillHints="@string/_0"
            tools:ignore="TextFields" />

    <Button
        android:id="@+id/btnAddItem"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/spacing_20"
        android:background="@drawable/btn_continue"
        android:gravity="center"
        android:text="@string/add_item"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:textSize="@dimen/font_15" />
</LinearLayout>