<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:seekarc="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/testlayout"
    android:orientation="vertical"
    tools:context=".ui.home.activities.StartFitnessTestActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/spacing_10"
            android:src="@drawable/leftarrow"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tvStartFitnessTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/startfitnesstest"
            android:textColor="@color/black"
            android:textSize="@dimen/font_18" />
    </RelativeLayout>


<FrameLayout
    android:layout_width="250dp"
    android:layout_height="250dp"
    android:layout_gravity="center"
    android:background="@drawable/custom_fitness_layout">

    <com.triggertrap.seekarc.SeekArc
        android:id="@+id/seekArc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="65dp"
        android:layout_margin="@dimen/spacing_10"
        seekarc:touchInside="true"/>
   <TextView
       android:id="@+id/tvtime"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/_0_00"
       android:textColor="@color/blue"
       android:layout_gravity="center"
       android:textSize="@dimen/font_28"/>
</FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
   <!-- <Button
        android:id="@+id/btnStop"
        android:background="@drawable/btn_continue"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/stop"
        android:layout_marginTop="@dimen/spacing_25"
        android:visibility="gone"
        android:textSize="@dimen/font_15"/>-->
        <Button
            android:id="@+id/btnStart"
            android:background="@drawable/btn_continue"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/start"
            android:layout_marginTop="@dimen/spacing_25"
            android:textSize="@dimen/font_15"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tvEnterResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterresult"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/font_13"
        android:layout_marginTop="@dimen/spacing_20"
        android:layout_marginStart="@dimen/spacing_10"/>

    <EditText
        android:id="@+id/etSelectResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_result"
        android:background="@drawable/layout_result"
        android:textColorHint="@color/textcolorgray"
        android:padding="@dimen/spacing_5"
        android:focusable="false"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        android:layout_margin="@dimen/spacing_10"
        tools:ignore="LabelFor"
        android:textSize="@dimen/font_16"
        android:autofillHints="0"
        android:inputType="text" />
    <EditText
        android:id="@+id/etComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_comment"
        android:background="@drawable/layout_result"
        android:textColorHint="@color/textcolorgray"
        android:padding="@dimen/spacing_5"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        android:layout_margin="@dimen/spacing_10"
        tools:ignore="LabelFor"
        android:textSize="@dimen/font_16"
        android:autofillHints="0"
        android:inputType="text" />
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/spacing_20"
        android:background="@drawable/btn_continue"
        android:text="@string/submit"
        android:textSize="@dimen/font_15" />

</LinearLayout>